--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,3 @@
-setuptools>=65.0.0
-Flask==2.3.3
-Flask-CORS==4.0.0
-numpy==1.24.3
-scikit-learn==1.3.0
-gunicorn==21.2.0
+numpy>=1.26.0
+scikit-learn>=1.3.0
+streamlit>=1.28.0
